// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > should render with label and error 1`] = `
<div>
  <div
    class="flex flex-col gap-1 w-full"
  >
    <label
      class="text-sm text-primary font-medium"
      for="email"
    >
      Email
    </label>
    <input
      class="bg-primary/20 border rounded-md p-2 w-full focus:outline-none focus:ring-2 focus:ring-primary border-warning"
      id="email"
      value="test@test.com"
    />
    <p
      class="text-warning text-sm"
    >
      This is an error
    </p>
  </div>
</div>
`;

exports[`Input > should render with label and without error 1`] = `
<div>
  <div
    class="flex flex-col gap-1 w-full"
  >
    <label
      class="text-sm text-primary font-medium"
      for="email"
    >
      Email
    </label>
    <input
      class="bg-primary/20 border border-primary/50 rounded-md p-2 w-full focus:outline-none focus:ring-2 focus:ring-primary"
      id="email"
      value="test@test.com"
    />
  </div>
</div>
`;

exports[`Input > should render without label and with error 1`] = `
<div>
  <div
    class="flex flex-col gap-1 w-full"
  >
    <input
      class="bg-primary/20 border rounded-md p-2 w-full focus:outline-none focus:ring-2 focus:ring-primary border-warning"
      id="email"
      value="test@test.com"
    />
    <p
      class="text-warning text-sm"
    >
      This is an error
    </p>
  </div>
</div>
`;
